Added changes to swagger.json file
