# internal/models/uploaded_image.go
@@ -1,19 +1,21 @@
-package model
+package models
 
 // UploadedImage contains information about uploaded image.
 //
 // Uploaded image is the general information.
 //
-// swagger:model
+// swagger:model UploadedImage
 type UploadedImage struct {
 	// the ID for this uploaded image
 	//
 	// required: false
-	ID int `json:"id,omitempty"`
+	ID int `json:"id"`
+
 	// the Name for this uploaded image
 	//
 	// required: false
 	Name string `json:"uploaded_name,omitempty"`
+
 	// the Location for this uploaded image
 	//
 	// required: false
